--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,4 @@
 preload = /home/toprak/.local/share/wallpapers/wp1.png
 wallpaper = ,/home/toprak/.local/share/wallpapers/wp1.png
-
-splash = true
+splash = false
 
