--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,14 +20,16 @@
 ### WIDGETS ###
 ###############
 exec-once = hyprpaper
-exec-once=waybar
+exec-once = waybar
 
 ################
 ### MONITORS ###
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,1
+
+monitor = , highres, auto, 1.0
+monitor = HDMI-A-2, 1920x1080, -1920x0, 1.0
 
 ###################
 ### MY PROGRAMS ###
@@ -36,9 +38,9 @@ monitor=,highres,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = wezterm
+$terminal = wezterm 
 $fileManager = dolphin
-$menu = /home/toprak/.config/rofi/launchers/type-7/launcher.sh
+$menu = EDITOR=nvim rofi -show drun --theme ~/.config/rofi/config.rasi
 
 #################
 ### AUTOSTART ###
@@ -59,8 +61,9 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,12
+env = HYPRCURSOR_SIZE,12
 
 #####################
 ### LOOK AND FEEL ###
@@ -71,7 +74,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 40
+    gaps_out = 5
 
     border_size = 0
 
@@ -95,7 +98,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.8
+    inactive_opacity = 0.95
 
     shadow {
         enabled = true
@@ -139,7 +142,7 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 7, default, slide
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
@@ -178,7 +181,7 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout =
+    kb_layout =  
     kb_variant =
     kb_model =
     kb_options =
@@ -223,6 +226,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = , PRINT, exec, hyprshot -m region --clipboard-only
+bind = $mainMod, PRINT, exec, hyprshot -m window --clipboard-only
 
 # Move focus with mainMod + arrow keys
 bind = $focusMod, left, movefocus, l
@@ -235,24 +240,12 @@ bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
 bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
 bind = $mainMod, S, togglespecialworkspace, magic
