--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -64,6 +64,11 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 env = XCURSOR_THEME,Bibata-Modern-Classic
 env = XCURSOR_SIZE,12
 env = HYPRCURSOR_SIZE,12
+env = __NV_PRIME_RENDER_OFFLOAD,1
+env = __VK_LAYER_NV_optimus,NVIDIA_only
+env = GBM_BACKEND,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 #####################
 ### LOOK AND FEEL ###
@@ -181,11 +186,8 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout =  
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
+    kb_layout = us,tr 
+    kb_options = grp:alt_caps_toggle 
 
     follow_mouse = 1
 
@@ -224,6 +226,7 @@ bind = $exitMod, F4,killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = , PRINT, exec, hyprshot -m region --clipboard-only
