--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -222,6 +222,7 @@ $focusMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod, N, exec, EDITOR=nvim $terminal -e yazi
 bind = $exitMod, F4,killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
@@ -229,7 +230,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, C, exec, hyprpicker
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = , PRINT, exec, hyprshot -m region --clipboard-only
+bind = , PRINT, exec, hyprshot -m region
 bind = $mainMod, PRINT, exec, hyprshot -m window --clipboard-only
 
 # Move focus with mainMod + arrow keys
